		thing work, by adding one to the adress it was fixed (no comment).
		Now I have to remap the IRQs on the PIC but first i need to
		understand how this kinds of signals works and communicate with the
		CPU and the Hardware.

		-- reading documentation on PIC and IRQs and creating irq.c.

week 5: IRQS mapping the real thing
(12/06/22 - 19/06/22)
		-- not as hard as i was thinking.

week 6: Week off due to medical reasons
(19/06/22 - 26/06/22)

week 7: Keyboard driver coding
(26/06/22 - 03/07/22)
		-- Ok it's time to get back to work.

		-- I implemented a function named keyboard_handling() and tried
		to execute it, it didn't work because i did not unmask the IRQs,
		now an new error occurs, the irqs are not well mapped, the kernel 
		throw an floating point error, and i don't know if it come from the
		mapping or somewhere else.

		-- becoming quite good with bochs, I rechecked the Init Controls
		Words and the value of the eflags, the problem can't be from the IRQ
		mapping.

		-- more checking today.

		-- found the problem, ISRs were not set properly, the error code and the
		error number were not pushed. fixed it by implementing a function that
		save the errcode and the error number, ISRs works well, however the
		ticking IRQ throw a general protection fault. So i need to check my
		gdt.

		-- i did not push the err code so i fixed it and it work just fine.

week 8: MEMORY MAP AND PMM (KILL ME)
(03/06/22 - )
		-- To get the memory map, first i need to push ebx before jumping into
		the kernel, and then get the multiboot info struct to get the memory
		map address, then i code a simple for function to print all the
		segment of the mmap.

		-- I don't know why my mmap is full of garbage, it's been 3 days now
		!!! I rechecked the mmap struct and the multiboot info struct and
		nothing, i checked the aligment and nothing, i rechecked the objdump
		of the functions nothing, tried to put "volatile" AND STILL NOTHING !
		arrrrrr, need some coffee.

