@@ -65,7 +65,6 @@ void main()
     Irq_remap();
     printf((unsigned char *) "Hello kernel world! : %b\n", 32);
 
-
     asm volatile("sti");
 
 
